--- a/WebsiteBanDoGiaDung/Areas/Admin/Views/Product/Edit.cshtml
+++ b/WebsiteBanDoGiaDung/Areas/Admin/Views/Product/Edit.cshtml
@@ -48,50 +48,19 @@
                                     </div>
                                 </div>
                                 <div class="form-group">
-                                    @Html.Label("Thông tin chi tiết")
-                                    <div class="">
-                                        @Html.TextAreaFor(model => model.Specification, new { @class = "textarea" })
-                                        @Html.ValidationMessageFor(model => model.Specification, "", new { @class = "text-danger" })
-                                    </div>
-                                </div>
-                                <div class="form-group">
-                                    @Html.Label("Giới thiệu sản phẩm")
+                                    @Html.Label("Mô tả sản phẩm")
                                     <div class="">
                                         @Html.TextAreaFor(model => model.Detail, new { @class = "textarea" })
                                         @Html.ValidationMessageFor(model => model.Detail, "", new { @class = "text-danger" })
                                     </div>
                                 </div>
                                 <div class="form-group">
-                                    @Html.Label("Mô tả sản phẩm")
+                                    @Html.Label("Chi tiết sản phẩm")
                                     <div class="">
                                         @Html.TextAreaFor(model => model.Description, new { @class = "textarea" })
                                         @Html.ValidationMessageFor(model => model.Description, "", new { @class = "text-danger" })
                                     </div>
                                 </div>
-                                <div class="form-group">
-                                    @Html.Label("Thông tin khuyến mại", htmlAttributes: new { @class = "control-label" })
-                                    <div class="">
-
-                                        @Html.TextAreaFor(model => model.NewPromotion, new { @class = "form-control", @rows = 5 })
-                                        @Html.ValidationMessageFor(model => model.NewPromotion, "", new { @class = "text-danger" })
-                                        <i class="text-danger"><strong>* </strong>Vui lòng xuống dòng cho mỗi khuyến mại</i>
-                                    </div>
-                                </div>
-                                <div class="form-group">
-                                    @Html.Label("Từ khóa", htmlAttributes: new { @class = "control-label" })
-                                    <div class="">
-                                        @Html.TextAreaFor(model => model.MetaKey, new { @class = "form-control" })
-                                        @Html.ValidationMessageFor(model => model.MetaKey, "", new { @class = "text-danger" })
-                                    </div>
-                                </div>
-                                <div class="form-group">
-                                    @Html.Label("Tìm kiếm phổ biến", htmlAttributes: new { @class = "control-label" })
-                                    <div class="">
-                                        @Html.TextAreaFor(model => model.MetaDesc, new { @class = "form-control" })
-                                        @Html.ValidationMessageFor(model => model.MetaDesc, "", new { @class = "text-danger" })
-                                    </div>
-                                </div>
-
                             </div>
 
                             <div class="col-3">
@@ -113,9 +82,9 @@
                                     </div>
                                 </div>
                                 <div class="form-group">
-                                    @Html.Label("Nhà cung cấp", new { @class = "control-label" })
+                                    @Html.Label("Chi nhánh", new { @class = "control-label" })
                                     <div class="">
-                                        @Html.DropDownListFor(model => model.OwnerId, (SelectList)ViewBag.ListOwner, "[Chọn nhà cung cấp]", new { @class = "form-control" })
+                                        @Html.DropDownListFor(model => model.OwnerId, (SelectList)ViewBag.ListOwner, "[Chọn chi nhánh]", new { @class = "form-control" })
                                         @Html.ValidationMessageFor(model => model.OwnerId, "", new { @class = "text-danger" })
                                     </div>
                                 </div>
@@ -141,39 +110,12 @@
                                     </div>
                                 </div>
                                 <div class="form-group">
-                                    @Html.Label("Chương trình giảm giá", htmlAttributes: new { @class = "control-label " })
-                                    <div class="">
-                                        @Html.DropDownListFor(model => model.Discount, new[] { new SelectListItem { Value = "1", Text = "Có" }, new SelectListItem { Value = "2", Text = "Không" } }, new { @class = "form-control" })
-                                        @Html.ValidationMessageFor(model => model.Discount, "", new { @class = "text-danger" })
-                                    </div>
-                                </div>
-                                <div class="form-group">
-                                    @Html.Label("Chương trình trả góp 0%", htmlAttributes: new { @class = "control-label " })
-                                    <div class="">
-                                        @Html.DropDownListFor(model => model.Installment, new[] { new SelectListItem { Value = "1", Text = "Có" }, new SelectListItem { Value = "2", Text = "Không" } }, new { @class = "form-control" })
-                                        @Html.ValidationMessageFor(model => model.Installment, "", new { @class = "text-danger" })
-                                    </div>
-                                </div>
-                                <div class="form-group">
                                     @Html.Label("Trạng thái", htmlAttributes: new { @class = "control-label " })
                                     <div class="">
                                         @Html.DropDownListFor(model => model.Status, new[] { new SelectListItem { Value = "1", Text = "Có" }, new SelectListItem { Value = "2", Text = "Không" } }, new { @class = "form-control" })
                                         @Html.ValidationMessageFor(model => model.Status, "", new { @class = "text-danger" })
                                     </div>
                                 </div>
-
-                                @*//@{ Html.TextAreaFor(model => model.MetaKey).Split(new string[] { Environment.NewLine }, StringSplitOptions.RemoveEmptyEntries).ToList(); }*@
-                                @{ String[] arr = Model.NewPromotion.Split(new[] { '\n' }); }
-                                @{int number = 1;}
-                                @foreach (var i in arr)
-                                {
-                                    <div class="d-inline">  @number</div>
-                                    @i<br />number++;
-
-                                }
-
-
-
                             </div>
                         </div>
                     </div>
