--- a/WebsiteBanDoGiaDung/Views/Account/Order.cshtml
+++ b/WebsiteBanDoGiaDung/Views/Account/Order.cshtml
@@ -53,7 +53,7 @@
                         <small class="text-secondary d-inline-block pt-3 pl-3">ID đơn hàng: @i.ID</small>
                     </div>
                     <div class="col-6 text-right  my-2 pt-2 ">
-                        <small class="d-inline text-secondary">Trạng thái |</small>
+                        @*<small class="d-inline text-secondary">Trạng thái |</small>
                         <div class="d-inline pr-3 text-uppercase" style="color:#ee4d2d; font-size:14px">
                             @if (i.Status == 1)
                                 {
@@ -69,7 +69,7 @@
                                     <span>Hoàn thành</span>
                                 }
                             
-                        </div>
+                        </div>*@
                     </div>
                 </div>
                 <div class="card mb-3 border-left-0 border-right-0 border-bottom-0 mx-3">
