--- a/WebsiteBanDoGiaDung/Views/Shared/_LayoutSite.cshtml
+++ b/WebsiteBanDoGiaDung/Views/Shared/_LayoutSite.cshtml
@@ -26,7 +26,20 @@
 
 </head>
 
-<body>
+<body onload=onReady()>
+    <!--Start of Tawk.to Script-->
+    <script type="text/javascript">
+        var Tawk_API = Tawk_API || {}, Tawk_LoadStart = new Date();
+        (function () {
+            var s1 = document.createElement("script"), s0 = document.getElementsByTagName("script")[0];
+            s1.async = true;
+            s1.src = 'https://embed.tawk.to/6241e3ca2abe5b455fc2049b/1fv8m3kou';
+            s1.charset = 'UTF-8';
+            s1.setAttribute('crossorigin', '*');
+            s0.parentNode.insertBefore(s1, s0);
+        })();
+    </script>
+    <!--End of Tawk.to Script-->
 
     @Html.Action("Header", "Module")
 
@@ -36,7 +49,7 @@
 
     <div style="background:#f3f3f3">
         <div class="copyright container-91">
-           Created by Coder
+            Created by Coder
         </div>
     </div>
 
@@ -45,21 +58,21 @@
     </div>
     <!-- owl -->
     <script src="~/Public/js/owl.carousel.js"></script>
-
+    <script src="~/Public/js/qrcode.min.js"></script>
     <script src="~/Public/js/popper.min.js"></script>
     <script src="~/Public/js/bootstrap.min.js"></script>
     <script src="~/Public/js/target.min.js"></script>
     <div id="fb-root"></div>
     <script async defer crossorigin="anonymous" src="https://connect.facebook.net/vi_VN/sdk.js#xfbml=1&version=v9.0&appId=699266887289373&autoLogAppEvents=1" nonce="xJm9L3lp"></script>
     <script>
-    $(document).ready(function () {
-        $("div[style='opacity: 0.9; z-index: 2147483647; position: fixed; left: 0px; bottom: 0px; height: 65px; right: 0px; display: block; width: 100%; background-color: #202020; margin: 0px; padding: 0px;']").remove();
-        $("div[style='margin: 0px; padding: 0px; left: 0px; width: 100%; height: 65px; right: 0px; bottom: 0px; display: block; position: fixed; z-index: 2147483647; opacity: 0.9; background-color: rgb(32, 32, 32);']").remove();
-        $("div[onmouseover='S_ssac();']").remove();
-        $("center").remove();
-        $("div[style='height: 65px;']").remove();
-    });
-</script>
+        $(document).ready(function () {
+            $("div[style='opacity: 0.9; z-index: 2147483647; position: fixed; left: 0px; bottom: 0px; height: 65px; right: 0px; display: block; width: 100%; background-color: #202020; margin: 0px; padding: 0px;']").remove();
+            $("div[style='margin: 0px; padding: 0px; left: 0px; width: 100%; height: 65px; right: 0px; bottom: 0px; display: block; position: fixed; z-index: 2147483647; opacity: 0.9; background-color: rgb(32, 32, 32);']").remove();
+            $("div[onmouseover='S_ssac();']").remove();
+            $("center").remove();
+            $("div[style='height: 65px;']").remove();
+        });
+    </script>
 </body>
 
 </HTML>
