--- a/WebsiteBanDoGiaDung/Views/Recommend/GetAddress.cshtml
+++ b/WebsiteBanDoGiaDung/Views/Recommend/GetAddress.cshtml
@@ -41,7 +41,7 @@
                                 <img style="width:90px;height:90px;border-radius:50%;margin-right:10px" src="https://i.pinimg.com/474x/d5/bd/4c/d5bd4c5e6a67580ba6eb3dd362626aa3.jpg" />
                             </div>
                             <div class="col-10">
-                                <h5>@item.Name</h5>
+                                <h5><a href="/san-pham/@item.Id">@item.Name</a></h5>
                                 <span style="font-weight:bold">Cách vị trí bạn: </span><span>@item.Distance km</span>
                             </div>
                         </div>
