--- a/WebsiteBanDoGiaDung/Views/Module/_Login.cshtml
+++ b/WebsiteBanDoGiaDung/Views/Module/_Login.cshtml
@@ -1,6 +1,6 @@
 ﻿@if (Session["User_Name"] == null)
 {
-    <button type="button" class="button_login" data-toggle="modal" data-target=".bd-example-modal-lg"
+    <button style="background-color:orangered" type="button" class="button_login" data-toggle="modal" data-target=".bd-example-modal-lg"
             data-whatever="getbootstrap" data-backdrop="static" data-keyboard="false">
         Đăng nhập,
     </button>
@@ -8,7 +8,7 @@
         <a href=""> Đăng ký thành viên</a>
     </button>
     -->
-    <button type="button" class="button_dangky" data-toggle="modal" data-target="#exampleModal" data-backdrop="static"
+    <button style="background-color:orangered" type="button" class="button_dangky" data-toggle="modal" data-target="#exampleModal" data-backdrop="static"
             data-keyboard="false">
         Đăng ký thành viên
     </button>
