--- a/WebsiteBanDoGiaDung/Views/Module/_Popu.cshtml
+++ b/WebsiteBanDoGiaDung/Views/Module/_Popu.cshtml
@@ -6,12 +6,10 @@
 <div style="background-color:#f3f3f3;" class="py-2">
     <div class="container-91 bg-white py-2 px-3">
         Tìm kiếm nhiều:
-        <a class="pl-3" href="">Truyện tranh</a>
-        <a class="pl-3" href="">Narotu</a>
-        <a class="pl-3" href="">Tranh màu</a>
-        <a class="pl-3" href="">Bitcoin</a>
-        <a class="pl-3" href="">Blockchian</a>
-        <a class="pl-3" href="">Đi xa</a>
-        <a class="pl-3" href="">Phượt</a>
+        <a class="pl-3" style="color:orangered" href="">Bún thái</a>
+        <a class="pl-3" style="color:orangered" href="">Chân gà nướng</a>
+        <a class="pl-3" style="color:orangered" href="">Bún bò</a>
+        <a class="pl-3" style="color:orangered" href="">Trà sữa thái xanh</a>
+      
     </div>
 </div>
