--- a/WebsiteBanDoGiaDung/Views/Recommend/GetAddress.cshtml
+++ b/WebsiteBanDoGiaDung/Views/Recommend/GetAddress.cshtml
@@ -6,10 +6,10 @@
     <div class="container">
         <div class="row" style="margin-top:20px">
             <div class="col-4">
-                <button style="margin-top: 10px; width: 50%;margin-left:5px;  height: 42px; border : 0; background-color: red; color: #fff; font-size: 14px" onclick="getLocation()">Lấy vị trí</button>
+                <button style="margin-top: 10px; width: 50%; margin-left: 5px; height: 42px; border: 0; background-color: orangered; color: #fff; font-size: 14px" onclick="getLocation()">Lấy vị trí</button>
                 <p style="margin-top:5px" id="demo"></p>
                 <form action="/Recommend/GetAddress" method="post">
-                    <button id="buttonDe" style="display:none; margin-top: 10px; width: 50%;margin-left:5px;  height: 42px; border : 0; background-color: #4a90e2; color: #fff; font-size: 14px" onclick="getLocation()">Xem đề xuất</button>
+                    <button id="buttonDe" style="display:none; margin-top: 10px; width: 50%;margin-left:5px;  height: 42px; border : 0; background-color: orangered; color: #fff; font-size: 14px" onclick="getLocation()">Xem đề xuất</button>
                     <input type="hidden" id="longTi" name="longTi" />
                     <input type="hidden" id="lat" name="lat" />
                 </form>
