--- a/WebsiteBanDoGiaDung/Views/Site/Contact.cshtml
+++ b/WebsiteBanDoGiaDung/Views/Site/Contact.cshtml
@@ -20,11 +20,11 @@
             </div>
             <div class="my-3">
                 <small class="text-secondary">Email chúng tôi</small>
-                <strong class="d-block" style="font-size:14px; color:#252a2b">hoangdung@gmail.com</strong>
+                <strong class="d-block" style="font-size:14px; color:#252a2b">Nguyenmaigiahuy2000@gmail.com</strong>
             </div>
             <div class="my-3">
                 <small class="text-secondary">Điện thoại</small>
-                <strong class="d-block" style="font-size:14px; color:#252a2b">0364 242 789</strong>
+                <strong class="d-block" style="font-size:14px; color:#252a2b">0973094051</strong>
             </div>
             <div class="my-3">
                 <small class="text-secondary">Thời gian làm việc</small>
