--- a/WebsiteBanDoGiaDung/Public/css/style.css
+++ b/WebsiteBanDoGiaDung/Public/css/style.css
@@ -837,7 +837,7 @@ footer .title {
 
 .button_login {
 	margin-top: -9px;
-	background: #4a90e2;
+	background-color: orangered;
 	border: 0;
 	color: #fff;
 	font-size: 15px;
@@ -850,7 +850,7 @@ footer .title {
 
 .button_dangky {
 	display: block;
-	background: #4a90e2;
+	background-color: orangered;
 	border: 0;
 	color: #d0efff;
 	font-size: 12px;
