--- a/WebsiteBanDoGiaDung/Views/Module/_Footer.cshtml
+++ b/WebsiteBanDoGiaDung/Views/Module/_Footer.cshtml
@@ -1,30 +1,30 @@
 ﻿@model IEnumerable<WebsiteBanDoGiaDung.Models.MMenu>
-<footer class="">
+<footer  style="background-color: #808080; color: white;padding:10px" class="container-fluid">
     <div class="row container-91 my-4">    
         <div class="col-3">
-                    <div class="title text-uppercase font-weight-bold">Về chúng tôi</div>
+                    <div style="color:white !important" class="title text-uppercase font-weight-bold">Về chúng tôi</div>
                     @foreach (var k in Model)
                     {
-                            <a href="~/@k.Link" class="ll text-decoration-none text-dark"> ‣ @k.Name</a>
+                            <a href="~/@k.Link"  style="color:white !important" class="ll text-decoration-none text-dark"> ‣ @k.Name</a>
                     }
                 </div>
            
         <div class="col-3">
-            <div class="title  font-weight-bold" ">TỔNG ĐÀI HỖ TRỢ (GỌI MIỄN PHÍ)</div>
-            <a href="javascript:void(0)" class="ll text-decoration-none text-dark"> Mua hàng <h6 class="font-weight-bold">0364.242.261 (7:30 - 22:00)</h6></a>
-            <a href="javascript:void(0)" class="ll text-decoration-none text-dark"> Liên hệ <h6 class="font-weight-bold">0822.068.581 (8:30 - 17:00)</h6></a>
-            <a href="javascript:void(0)" class="ll text-decoration-none text-dark"> Phản hồi <h6 class="font-weight-bold">0123.456.789 (8:30 - 17:00)</h6></a>
+            <div class="title  font-weight-bold">TỔNG ĐÀI HỖ TRỢ (GỌI MIỄN PHÍ)</div>
+            <p  style="color:white !important" class="ll text-decoration-none text-dark"> Liên hệ <h6 style="color:white" class="font-weight-bold">0973094051</h6></p>
+            <p style="color:white !important" class="ll text-decoration-none text-dark"> Liên hệ <h6 style="color:white" class="font-weight-bold">0704808205 </h6></p>
 
         </div>
         <div class="col-3">
-            <div class="title font-weight-bold mb-2">KHÁCH HÀNG</div>
+            <div style="color:white !important" class="title font-weight-bold mb-2">KHÁCH HÀNG</div>
             
             
         </div>
         <div class="col-md-3">
-            <div class="title text-uppercase font-weight-bold">KẾT NỐI VỚI CHÚNG TÔI</div>
-                <div class="fb-page" data-href="https://www.facebook.com" data-tabs="timeline" data-width="" data-height="" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com">Gia Dụng Rẻ </a></blockquote></div>
-            
+            <div style="color:white !important" class="title text-uppercase font-weight-bold">KẾT NỐI VỚI CHÚNG TÔI</div>
+          
+            <p  style="color:white !important" class="ll text-decoration-none text-dark"> Email: <h6 style="color:white" class="font-weight-bold">Nguyenmaigiahuy2000@gmail.com</h6></p>
+            <p  style="color:white !important" class="ll text-decoration-none text-dark"> Email <h6 style="color:white" class="font-weight-bold">Letuan01697@gmail.com</h6></p>
         </div>
     </div>
 
