--- a/WebsiteBanDoGiaDung/Views/Account/OrderDetails.cshtml
+++ b/WebsiteBanDoGiaDung/Views/Account/OrderDetails.cshtml
@@ -61,7 +61,11 @@
                                     <td class="text-secondary">Số điện thoại</td>
                                     <td>@ViewBag.Order.DeliveryPhone</td>
                                 </tr>
-                               
+                                <tr>
+                                    <td class="text-secondary">Thời gian đặt:</td>
+                                    <td>@ViewBag.Order.CreateDate</td>
+                                </tr>
+                                
                             </table>
                         </div>
                         <div class="col-12 mt-3">
