--- a/WebsiteBanDoGiaDung/Views/Site/Product.cshtml
+++ b/WebsiteBanDoGiaDung/Views/Site/Product.cshtml
@@ -27,7 +27,7 @@
                         }
                     </div>
                     <div class="couple">
-                        @if (row.Discount == 1)
+                        @if ((row.Price - row.ProPrice) / row.Price * 100 != 0)
                         {
                             <img src="~/Public/images/online-giảm-sốc-1x.png" alt="" class="h-100">
                         }
@@ -39,10 +39,13 @@
                         <div class="price">
                             @String.Format("{0:0,0₫}", row.ProPrice)
                         </div>
-                        <div class="old-price float-left">
-                            @String.Format("{0:0,0₫}", row.Price)
-                        </div>
-                        <div class="khongbietdattenlagi float-left">(-@String.Format("{0:0}", ((row.Price - row.ProPrice) / row.Price * 100))%)</div>
+                        @if ((row.Price - row.ProPrice) / row.Price * 100 != 0)
+                        {
+                            <div class="old-price float-left">
+                                @String.Format("{0:0,0₫}", row.Price)
+                            </div>
+                            <div class="khongbietdattenlagi float-left"> (-@String.Format("{0:0}", ((row.Price - row.ProPrice) / row.Price * 100))%)</div>
+                        }
                     </div>
                 </a>
             </div>
