--- a/WebsiteBanDoGiaDung/Views/Site/ProductCategory.cshtml
+++ b/WebsiteBanDoGiaDung/Views/Site/ProductCategory.cshtml
@@ -64,7 +64,7 @@
                                                 <div class="anw">Trả góp <span class="font-weight-bold">0%</span></div>
                                                 <div class="giam">Giảm 200,000đ</div>
                                             }
-                                            @if (row.Discount == 1)
+                                            @if ((row.Price - row.ProPrice) / row.Price * 100 != 0)
                                             {
                                                 <img src="~/Public/images/online-giảm-sốc-1x.png" class="h-100" />
                                             }
@@ -76,10 +76,13 @@
                                             <div class="price">
                                                 @String.Format("{0:0,0₫}", row.ProPrice)
                                             </div>
-                                            <div class="old-price float-left">
-                                                @String.Format("{0:0,0₫}", row.Price)
-                                            </div>
-                                            <small class="khongbietdattenlagi float-left text-danger">&nbsp; (-@String.Format("{0:0}", ((row.Price - row.ProPrice) / row.Price * 100))%)</small>
+                                            @if ((row.Price - row.ProPrice) / row.Price * 100 != 0)
+                                            {
+                                                <div class="old-price float-left">
+                                                    @String.Format("{0:0,0₫}", row.Price)
+                                                </div>
+                                                <div class="khongbietdattenlagi float-left"> (-@String.Format("{0:0}", ((row.Price - row.ProPrice) / row.Price * 100))%)</div>
+                                            }
                                         </div>
                                         <img src="~/Public/images/online-giảm-sốc-1x.png" class="onlinegiamsoc" />
                                     </div>
