--- a/WebsiteBanDoGiaDung/Views/Site/Home.cshtml
+++ b/WebsiteBanDoGiaDung/Views/Site/Home.cshtml
@@ -27,7 +27,7 @@
                             <img src="~/Public/images/products/@p.Image" alt="" class="beau">
                         </div>
                         <div class="couple">
-                            @if (p.Discount == 1)
+                            @if ((p.Price - p.ProPrice) / p.Price * 100 != 0)
                             {
                                 <img src="~/Public/images/online-giảm-sốc-1x.png" alt="" class="h-100">
                             }
@@ -39,10 +39,13 @@
                             <div class="price">
                                 @String.Format("{0:0,0₫}", p.ProPrice)
                             </div>
-                            <div class="old-price float-left">
-                                @String.Format("{0:0,0₫}", p.Price)
-                            </div>
-                            <div class="khongbietdattenlagi float-left"> (-@String.Format("{0:0}", ((p.Price - p.ProPrice) / p.Price * 100))%)</div>
+                            @if ((p.Price - p.ProPrice) / p.Price * 100 != 0)
+                            {
+                                <div class="old-price float-left">
+                                    @String.Format("{0:0,0₫}", p.Price)
+                                </div>
+                                <div class="khongbietdattenlagi float-left"> (-@String.Format("{0:0}", ((p.Price - p.ProPrice) / p.Price * 100))%)</div>
+                            }
                         </div>
                     </a>
                 </div>
@@ -71,7 +74,7 @@
                             <img src="~/Public/images/products/@p.Image" alt="" class="beau">
                         </div>
                         <div class="couple">
-                            @if (p.Discount == 1)
+                            @if ((p.Price - p.ProPrice) / p.Price * 100 != 0)
                             {
                                 <img src="~/Public/images/online-giảm-sốc-1x.png" alt="" class="h-100">
                             }
@@ -83,10 +86,15 @@
                             <div class="price">
                                 @String.Format("{0:0,0₫}", p.ProPrice)
                             </div>
-                            <div class="old-price float-left">
-                                @String.Format("{0:0,0₫}", p.Price)
-                            </div>
-                            <div class="khongbietdattenlagi float-left"> (-@String.Format("{0:0}", ((p.Price - p.ProPrice) / p.Price * 100))%)</div>
+
+                            @if ((p.Price - p.ProPrice) / p.Price * 100 != 0)
+                            {
+                                <div class="old-price float-left">
+                                    @String.Format("{0:0,0₫}", p.Price)
+                                </div>
+                                <div class="khongbietdattenlagi float-left"> (-@String.Format("{0:0}", ((p.Price - p.ProPrice) / p.Price * 100))%)</div>
+                            }
+
                         </div>
                     </a>
                 </div>
